reduce font size emoji don't render above a certain size on mobile. Chrom bug: https://stackoverflow.com/questions/29142118/why-do-emoji-not-render-above-a-certain-size-in-chrome/43889981#43889981

--- a/app.css
+++ b/app.css
@@ -18,6 +18,6 @@ body::-webkit-scrollbar {
 }
 
 .item {
-    font-size: 20vw;
+    font-size: 18vw;
     text-shadow: 0 .2rem whitesmoke, .2rem 0 whitesmoke, -.2rem 0 whitesmoke, 0 -.2rem whitesmoke;
 }
